  (Marcelo Vanzin)

- Binding simple "+" (not VK_ADD nor VK_PLUS) as a shortcut is now possible.
  (SF.net Bug #1166530 - Kazutoshi Satoda)

- Windows installer now prefer the path of javaw.exe in system directory
  to JDK/JRE directory, which was dependant on Java's version. Now you can
  update Java without reinstalling jEdit.
  (SF.net bug #1227497 - Kazutoshi Satoda)

}}}
{{{ Miscellaneous

- After an hypersearch, if a result is on the caret line, it is automatically selected
  in the tree (Matthieu Casanova)

- If you remove the last node of the HyperSearch dockable, it will hide
  (Feature Request #1593526) (Matthieu Casanova)

- A new option introduced in Saving & backups option panel to turn off autosave
  of untitled buffers (Feature Request #1520769)  (Matthieu Casanova)

- New option in General Options: Check for File Change upon. Many options
  to customize when jEdit checks for file changes, especially useful when many
  files are mounted on remote/slow file systems. (Joe Walp - Patch # 1768638)

- A new button is introduced in the plugin manager : "Find Orphans".
  It will find the jars that are in your jars directory and do not belong to any
  plugin. Be careful some plugins like SQL can use jars without declaring them
  like the JDBC drivers (Matthieu Casanova)

- A new option is introduced in the general option panel. Now jEdit will ask
  the user if he wants to stop hypersearch if a result count limit is reached.
  By default the count is 1000. It checks the limit before each file so it is
  possible that a few more results are found before asking (Matthieu Casanova)

- The release date in the plugin install panel is now aligned to the right (Matthieu Casanova)
}}}
{{{ Editing

- Some enhancements to the IDL mode, and made some definitions in the C mode
  more reusable. (Marcelo Vanzin)

- NO_ESCAPE is now deprecated and ignored by the parsing engine. ESCAPE is now
  a valid attribute for SPAN and SPAN_REGEXP rules. All mode files updated to